--- a/CYWebImage/CYWebImage/CYTableViewCell.xib
+++ b/CYWebImage/CYWebImage/CYTableViewCell.xib
@@ -7,28 +7,48 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="CYTableViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="200"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="93" id="KGk-i7-Jjw" customClass="CYTableViewCell">
+            <rect key="frame" x="0.0" y="0.0" width="300" height="100"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="199.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="300" height="99"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="YK2-jr-lNa">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="199.5"/>
+                        <rect key="frame" x="20" y="20" width="60" height="60"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="60" id="30L-yz-W6U"/>
+                            <constraint firstAttribute="height" constant="60" id="H6h-jx-jYB"/>
+                            <constraint firstAttribute="width" constant="60" id="i0s-21-5PY"/>
+                            <constraint firstAttribute="height" constant="60" id="ir5-1F-3Fp"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="H6h-jx-jYB"/>
+                                <exclude reference="i0s-21-5PY"/>
+                            </mask>
+                        </variation>
                     </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="叫兽哥哥" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wy2-pT-cUa">
+                        <rect key="frame" x="107" y="39" width="170" height="21"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="YK2-jr-lNa" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="1US-KQ-MSB"/>
-                    <constraint firstItem="YK2-jr-lNa" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="GCH-jh-E40"/>
-                    <constraint firstAttribute="bottom" secondItem="YK2-jr-lNa" secondAttribute="bottom" id="ZfZ-Ko-0JE"/>
-                    <constraint firstAttribute="trailing" secondItem="YK2-jr-lNa" secondAttribute="trailing" id="pHV-gA-5yr"/>
+                    <constraint firstItem="wy2-pT-cUa" firstAttribute="leading" secondItem="YK2-jr-lNa" secondAttribute="trailing" constant="27" id="20O-qR-jRp"/>
+                    <constraint firstItem="YK2-jr-lNa" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="Aj0-Ax-HJM"/>
+                    <constraint firstAttribute="bottom" secondItem="wy2-pT-cUa" secondAttribute="bottom" constant="39" id="IY2-mB-Vyq"/>
+                    <constraint firstAttribute="trailing" secondItem="wy2-pT-cUa" secondAttribute="trailing" constant="23" id="YyD-Ja-2Nw"/>
+                    <constraint firstItem="YK2-jr-lNa" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="20" id="d4A-XX-SKy"/>
+                    <constraint firstItem="wy2-pT-cUa" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="39" id="d4z-EL-Usv"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
                 <outlet property="cyImagreView" destination="YK2-jr-lNa" id="Bab-hc-UI1"/>
             </connections>
-            <point key="canvasLocation" x="213" y="231"/>
+            <point key="canvasLocation" x="203" y="177"/>
         </tableViewCell>
     </objects>
 </document>
